# modalcom-ai-workers

./: .coverage  .editorconfig  .env.example  .gitignore  .infisical.json  .mise.toml  .pr_agent.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  SECURITY.md  benchmark_auth.py  check_annotations.py  combined_changes.txt  commit_msg.txt  coverage.json  coverage_fix.json  files_with_annotations.txt  fix_asr.py  fix_double_ignores.py  fix_reranker_types.py  fix_ruff_errors.py  fix_ty_errors.py  get_plan.py  patch.py  patch_mm_reranker.py  patch_mm_reranker2.py  patch_mm_reranker3.py  patch_pyproject.py  patch_test.py  patch_tests.py  patch_tests_config.py  plan.md  pr_description.md  pyproject.toml  refactor_trainer.py  release-please-config-beta.json  (+17 more)
.Jules/: palette.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  best_practices.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/rulesets/: development.json  main.json  production.json
.github/workflows/: bot-governance.yml  cd.yml  ci.yml
cov_annotate/: z_84d750d1186048d8_utils.py,cover
docs/: ADD_NEW_MODEL.md
litellm/: README.md  config.yaml
scripts/: enforce-commit.sh
src/ai_workers/: __init__.py  __main__.py
src/ai_workers/cli/: __init__.py  __main__.py  convert.py  deploy.py  deploy.py,cover  gguf_convert.py  gguf_convert.py,cover  onnx_convert.py  upload.py
src/ai_workers/common/: __init__.py  auth.py  config.py  constants.py  http.py  images.py  logging.py  r2.py  utils.py  volumes.py
src/ai_workers/workers/: __init__.py  asr.py  converter.py  embedding.py  gguf_converter.py  mm_reranker.py  ocr.py  onnx_converter.py  reranker.py  tts.py  vl_embedding.py  vl_reranker.py
tests/: conftest.py  test_asr.py  test_asr_size_limit.py  test_auth.py  test_auth_middleware.py  test_cli_convert.py  test_cli_gguf_convert.py  test_cli_main.py  test_cli_onnx_convert.py  test_cli_upload.py  test_common_utils.py  test_common_utils.py.patch  test_common_volumes.py  test_config.py  test_convert_extra.py  test_converter.py  test_converter_function.py  test_coverage_boost.py  test_deploy.py  test_deploy_all_failures.py  test_deploy_app_direct.py  test_deploy_coverage.py  test_deploy_extra.py  test_gemma4_data_pipeline.py  test_gguf_convert_model.py  test_gguf_converter.py  test_gguf_converter_refactor.py  test_hard_negative_mining.py  test_http.py  test_images.py  test_init.py  test_init_modal.py  test_logging.py  test_mm_reranker_ssrf.py  test_ocr.py  test_onnx_converter.py  test_onnx_converter_coverage_extended.py  test_onnx_converter_extended.py  test_onnx_converter_run.py  test_onnx_security.py  (+20 more)
training/gemma4_reranker/: README.md  __init__.py  config.py  data_pipeline.py  dataset.py  eval.py  fix_notebook.py  hard_negative_mining.py  kaggle_dataprep_stage1.ipynb  kaggle_stage1.ipynb  kaggle_stage1_fixed.ipynb  kaggle_stage2.ipynb  merge.py  model.py  prepare_dataset.py  replay_buffer.py  run_train.py  trainer.py  video.py
training/gemma4_reranker/deploy_prep/: kaggle_data_prep_stage1.py  kernel-metadata.json
