[project]
name = "ai-workers"
version = "0.1.0"
description = "Self-hosted AI model workers on Modal.com with LiteLLM-compatible endpoints"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
  "fastapi[dev]>=0.128.5",
  "librosa[dev]>=0.11.0",
  "loguru>=0.7",
  "pillow[dev]>=12.1.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
]

[project.optional-dependencies]
# Local model conversion (CPU/GPU)
convert = [
  "torch>=2.4",
  "transformers>=4.47",
  "safetensors>=0.4",
  "accelerate>=1.0",
  "huggingface-hub>=0.26",
  "typer>=0.15",
  "rich>=13.0",
]
# Upload to CF R2 / GDrive
storage = [
  "boto3>=1.35",
  "typer>=0.15",
  "rich>=13.0",
]
# Modal deployment (local CLI)
deploy = [
  "modal>=0.73",
  "typer>=0.15",
  "rich>=13.0",
]
# All local tools
dev = [
  "ai-workers[convert,storage,deploy]",
  "ruff>=0.9",
  "ty>=0.0.1a6",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_workers"]

# --- Ruff ---
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "RUF", # ruff-specific
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # do not perform function call in argument defaults (typer)
]

[tool.ruff.lint.isort]
known-first-party = ["ai_workers"]

# --- ty ---
[tool.ty]

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
[tool.ty.src]
include = ["src"]
[tool.ty.environment]
python = ".venv/bin/python"
